fix the sign up window scroll down too big

--- a/css/style.css
+++ b/css/style.css
@@ -989,7 +989,7 @@ tr:nth-child(odd) {
   
   .modal-content  {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 5% 30%;
     border: 1px solid #888;
     width: 85%; /* Could be more or less, depending on screen size */
 	  padding: 5px;
